# OpenCL_DaMa_Library

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
OCL_RC/: CMakeLists.txt  OCL_RC.cpp
includes/: MultiplattformTypes.h  OpenCLExecutor.h  OpenCLGLExecutorAdapter.h  OpenCLTypes.h  ocldebughelpers.h
src/: OCLDebugHelpers.cpp  OpenCLExecutor.cpp  OpenCLGLExecutorAdapter.cpp
src/opencl/: DebugColoring.cl
